examples/test/testpolicy7868.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7868
  namespace: namespace175
spec:
  podSelector:
    matchLabels:
      key21: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value23
          key31: value6
      podSelector:
        matchLabels:
          key18: value42
          key40: value29
